<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/BTNauth"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/BTNreg"
        app:layout_constraintEnd_toEndOf="@+id/BTNreg"
        app:layout_constraintStart_toStartOf="@+id/BTNreg" />

    <Button
        android:id="@+id/BTNreg"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/auth_password"
        android:layout_width="264dp"
        android:layout_height="63dp"
        android:layout_marginBottom="112dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Hintpassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/BTNauth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/auth_login"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Hintlogin"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/auth_password"
        app:layout_constraintEnd_toEndOf="@+id/auth_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/auth_password" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="249dp"
        android:layout_height="221dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/firstname"
        app:layout_constraintStart_toStartOf="@+id/firstname"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>